fix: Alterado login para hash
