# project_library_api/factory.py
@@ -6,7 +6,7 @@ def new_register(first_name, last_name, cellphone, email, password, birth_date, 
     return User(first_name=first_name, last_name=last_name, cellphone=cellphone, email=email, password=password,\
          db=db.session, birth_date=birth_date, address=address, zip_code=zip_code, role=role)
 
-def new_login(email, password, db):
+def new_login(hash, db):
     from project_library_api.resources.auth import Authentication
 
-    return Authentication(email=email, password=password, db=db)
+    return Authentication(hash=hash, db=db)
